@@ -56,6 +56,7 @@ INCOMPATIBLE CHANGES
   TEZ-1194. Make TezUserPayload user facing for payload specification
   TEZ-1347. Consolidate MRHelpers.
   TEZ-1072. Consolidate monitoring APIs in DAGClient
+  TEZ-1410. DAGClient#waitForCompletion() methods should not swallow interrupts
 
 Release 0.4.0-incubating: 2014-04-05
 
